--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="https://i.imgur.com/imRujFM.jpg" alt="">
         <img src="https://i.imgur.com/w3ns4Ds.jpg" alt="">
         <img src="https://i.imgur.com/esASB2h.jpg" alt="">
-        <p>Livicis Nguyễn J2Team</p>
+        <p>Trần Quang</p>
     </div>
     <script src="./script.js"></script>
 </body>
