--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 
 <body>
     <div id="box">
-        <img src="https://scontent.fhan2-4.fna.fbcdn.net/v/t1.0-9/11150150_935227473206544_952921439694527553_n.jpg?_nc_cat=104&_nc_oc=AQk5Epo4lmEvpqq_JCFgaGNbRIIlRRxMDeime_AW_t37VFlQBa48MeiMcAReG6Fn5kY&_nc_ht=scontent.fhan2-4.fna&oh=01a07331ab2a749f14d027239d8dc5df&oe=5DC3FE1D" alt="">
-        <img src="https://i.imgur.com/ep8T10F.jpg" alt="">
-        <img src="https://i.imgur.com/c1ivCvF.jpg" alt="">
-        <img src="https://i.imgur.com/qXCdzo2.jpg" alt="">
-        <img src="https://i.imgur.com/edZ45MH.jpg" alt="">
-        <img src="https://i.imgur.com/imRujFM.jpg" alt="">
-        <img src="https://i.imgur.com/w3ns4Ds.jpg" alt="">
-        <img src="https://i.imgur.com/esASB2h.jpg" alt="">
+        <img src="./images/image1.jpg" alt="">
+        <img src="./images/image2.jpg" alt="">
+        <img src="./images/image3.jpg" alt="">
+        <img src="./images/image4.jpg" alt="">
+        <img src="./images/image5.jpg" alt="">
+        <img src="./images/image6.jpg" alt="">
+        <img src="./images/image7.jpg" alt="">
+        <img src="./images/image8.jpg" alt="">
         <p>Trần Quang</p>
+        <p>"ʍọɨ ȶɦứ đềʊ ƈó ȶɦờɨ đɨểʍ ȶɦíƈɦ ɦợք ƈủǟ ռó ʋà ʟʊôռ ƈó ȶɦờɨ đɨểʍ ȶɦíƈɦ ɦợք ƈɦօ ʍọɨ ȶɦứ"</p>
     </div>
     <script src="./script.js"></script>
 </body>
