--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <img src="./images/image6.jpg" alt="">
         <img src="./images/image7.jpg" alt="">
         <img src="./images/image8.jpg" alt="">
-        <p>Trần Quang</p>
-        <p>"ʍọɨ ȶɦứ đềʊ ƈó ȶɦờɨ đɨểʍ ȶɦíƈɦ ɦợք ƈủǟ ռó ʋà ʟʊôռ ƈó ȶɦờɨ đɨểʍ ȶɦíƈɦ ɦợք ƈɦօ ʍọɨ ȶɦứ"</p>
+        <p>Mọi thứ đều có thời điểm thích hợp của nó và luôn có thời điểm thích hợp cho mọi thứ</p>
     </div>
     <script src="./script.js"></script>
 </body>
