--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
 </head>
 
 <body>
-    <div id="box">
-        <img src="./images/image1.jpg" alt="">
-        <img src="./images/image2.jpg" alt="">
-        <img src="./images/image3.jpg" alt="">
-        <img src="./images/image4.jpg" alt="">
-        <img src="./images/image5.jpg" alt="">
-        <img src="./images/image6.jpg" alt="">
-        <img src="./images/image7.jpg" alt="">
-        <img src="./images/image8.jpg" alt="">
-        <p>Mọi thứ đều có thời điểm thích hợp của nó và luôn có thời điểm thích hợp cho mọi thứ</p>
+    <div id="three-container"></div>
+
+    <div id="instructions">
+        click and drag to control the animation
     </div>
+    
     <script src="./script.js"></script>
 </body>
 
