Image Transition Update 2

--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Trần Văn Quang</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
     <div id="three-container"></div>
-
     <div id="instructions">
-        click and drag to control the animation
+        Trần Văn Quang
     </div>
-    
-    <script src="./script.js"></script>
+    <script src='js/three.min.js'></script>
+    <script src='js/TweenMax.min.js'></script>
+    <script src='js/bas.js'></script>
+    <script src='js/OrbitControls-2.js'></script>
+    <script src="js/index.js"></script>
 </body>
-
 </html>
