--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <img src="./lp_1_files/bang.jpg" alt="">
     </section>
     <section class="box6" id="box6">
-      <form id="dathang-form3" method="POST" action="https://fujikobura.com/lp_1/contact/index"
+      <form id="dathang-form3" method="POST" action="https://kwangtran.github.io/thankspage.html"
         onsubmit="return Payment3()">
         <div class="thongtin">Thông tin sản phẩm</div>
         <div class="item1box6">
@@ -224,7 +224,8 @@
               </div>
             </div>
           </div>
-          <div class="buttonsss"><button>Để lại thông tin để mua hàng</button></div>
+          <!-- <div class="buttonsss"><button>Để lại thông tin để mua hàng</button></div> -->
+          <div class="buttonsss"><button>Đi đến trang thankspage</button></div>
         </div>
       </form>
     </section>
