--- a/index3.html
+++ b/index3.html
@@ -749,8 +749,7 @@
       <img src="./lp_2_files/bang.jpg" alt="">
     </section>
     <section class="box6" id="box6">
-      <form id="dathang-form3" method="POST" action="https://kwangtran.github.io/thankspage"
-        onsubmit="return Payment3()">
+      <form id="dathang-form3" method="POST" action="thankspage.html" onsubmit="return Payment3()">
         <div class="thongtin">Thông tin sản phẩm</div>
         <div class="item1box6">
           <div class="row">
