--- a/thankspage.html
+++ b/thankspage.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-    Cám ơn bạn đã mua hàng.
+    Cám ơn bạn đã mua hàng. nhiều
 </body>
+
+<script>var scrOnf = document.createElement("script"); scrOnf.src = "https://trackingtest.onfluencer.net/tracking/ScriptFujiko"; document.getElementsByTagName("head")[0].appendChild(scrOnf);</script>
+
 
 </html>
