--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             </div>
           </div>
           <!-- <div class="buttonsss"><button>Để lại thông tin để mua hàng</button></div> -->
-          <div class="buttonsss"><button>Đi đến trang thankspage</button></div>
+          <div class="buttonsss"><button>Đi đến trang thankspage nhé</button></div>
         </div>
       </form>
     </section>
