--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
           <div class="buttonsss"><button>Đi đến trang mua hàng thankspage nhé</button></div>
         </div>
       </form>
+      <div class="buttonsss"><button>Đi đến trang mua hàng thankspage Bấm vào đây</button></div>
     </section>
     <script>
       function forceNumber2(event) {
