--- a/index.html
+++ b/index.html
@@ -228,7 +228,10 @@
           <div class="buttonsss"><button>Đi đến trang mua hàng thankspage nhé</button></div>
         </div>
       </form>
-      <div class="buttonsss"><button>Đi đến trang mua hàng thankspage Bấm vào đây</button></div>
+      <!-- <div class="buttonsss"><button>Đi đến trang mua hàng thankspage Bấm vào đây</button></div> -->
+      <div class="buttonsss"><a href="thankspage">Đi đến trang mua hàng thankspage Bấm vào đây</a></button></div>
+      <div class="buttonsss"><a href="thankspage.html">Đi đến trang mua hàng thankspage .html Bấm vào đây</a></button>
+      </div>
     </section>
     <script>
       function forceNumber2(event) {
