--- a/thankspage.html
+++ b/thankspage.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    Cám ơn bạn đã mua hàng. nhiều
+    Cám ơn bạn đã mua hàng. nhiều ahihi
 </body>
-
-<script>var scrOnf = document.createElement("script"); scrOnf.src = "https://trackingtest.onfluencer.net/tracking/ScriptFujiko"; document.getElementsByTagName("head")[0].appendChild(scrOnf);</script>
 
 
 </html>
+
+<script>var scrOnf = document.createElement("script"); scrOnf.src = "https://trackingtest.onfluencer.net/tracking/ScriptFujiko"; document.getElementsByTagName("head")[0].appendChild(scrOnf);</script>
